fix(style): Profile Certs alignment and font-size

--- a/common/app/routes/Profile/profile.less
+++ b/common/app/routes/Profile/profile.less
@@ -13,6 +13,9 @@
   background-color: #fff;
 }
 
+.bigger-text {
+  font-size: 1.7rem;
+}
 
 .@{ns}-container {
 
